 5. Add action to add podcast via URL.
 6. Add configuration of browse-modes to player settings.
 7. When creating, or editing, a group, set browse modes to the enabled modes
    from all members.
 8. List all active plugins in 'Information' dialog.
 9. Add updating of plugins to 'Information' dialog.
10. Remove 'Server settings' from main menu, make accessible from 'Information'
    dialog.

1.0.2
-----
1. Simplify volume change logic. Previously any changes that occured within 1/2
   second of our change would be ignored.
2. Fix saving of pinned item list to new user defaults.
3. When listing album tracks, need to pass "artist_id:ID" regardless of the role
   filter being set or not. 2nd attempt at fix - ignore filters when checking
   to add.

1.0.1
-----
 1. Allow items from within 'Radio', and browse modes containing genre_id to be
    pinned to home screen.
 2. For screens up to 500px wide, allow volume control to be full width, for
    others max width is 450px. This is to prevent scenario where there is a tiny
    (e.g. 5px) gap on the side.
 3. Sort players in 'Information' dialog.
 4. Use 'v-show' to control when to show mobile pages.
 5. Fix 'clickability' of home screen item checkbox list.
 6. When using 'More' menu item for track information, only clear browse history
    stack if it has 50 or more steps.
 7. Add Russian translation - thanks to sky418.
 8. Reduce list item height by 3px, so that it's the same as subtoolbar height.
    This allows initial lists in desktop layout to be balanced.
 9. Width must be 25% more than height to be classified as landscape.
10. Check landscape setting of now-playing 1 second after mounted.
11. Fix toolbar layout when using mobile in landscape with song info showing on
    now playing page.
12. Fix missing headers in search results.
13. Fix 'undefined Items' when refreshing some lists.
14. Always indent player names if more than 1 player, or players on another
    server - makes headers more obvious.